<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/learning"
    tools:context=".ReseniaActivity">

    <include layout="@layout/toolbar"/>

    <Button
        android:id="@+id/button10"
        android:layout_width="62dp"
        android:layout_height="46dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#303098"
        android:pointerIcon="zoom_in"
        android:shadowColor="@color/black"
        android:text="@string/botonAtras"
        android:textColorHighlight="@color/black"
        android:textColorLink="@color/black"
        app:icon="?attr/homeAsUpIndicator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:rippleColor="@color/black"
        app:strokeColor="@color/black" />

    <Button
        android:id="@+id/button9"
        android:layout_width="62dp"
        android:layout_height="46dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#303098"
        android:pointerIcon="zoom_in"
        android:shadowColor="@color/black"
        android:text="@string/botonAtras"
        android:textColorHighlight="@color/black"
        android:textColorLink="@color/black"
        app:icon="@android:drawable/ic_menu_close_clear_cancel"
        app:iconTint="@color/white"
        app:iconTintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.908"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:rippleColor="@color/black"
        app:strokeColor="@color/black" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="176dp"
        android:layout_height="40dp"
        android:autoText="false"
        android:background="#87FFFFFF"
        android:includeFontPadding="false"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/textresenias"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.185" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#87FFFFFF"
        android:text="@string/textnombreLibro"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.267" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="143dp"
        android:layout_height="24dp"
        android:background="#87FFFFFF"
        android:text="@string/nombredelLibro"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27"
        app:layout_constraintVertical_bias="0.058" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#87FFFFFF"
        android:text="@string/textautorlibro"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView29"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28"
        app:layout_constraintVertical_bias="0.072" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="144dp"
        android:layout_height="30dp"
        android:background="#87FFFFFF"
        android:text="@string/autordelLibro"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.698"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29"
        app:layout_constraintVertical_bias="0.049" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#87FFFFFF"
        android:text="@string/texteditoriallibro"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView31"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30"
        app:layout_constraintVertical_bias="0.088" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="144dp"
        android:layout_height="29dp"
        android:background="#87FFFFFF"
        android:text="@string/editorialdelLibro"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.699"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31"
        app:layout_constraintVertical_bias="0.067" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:background="#87FFFFFF"
        android:text="@string/textaniopublicacion"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="140dp"
        android:layout_height="33dp"
        android:background="#87FFFFFF"
        android:text="@string/aniodePublicacion"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView38"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView35"
        app:layout_constraintTop_toBottomOf="@+id/textView33"
        app:layout_constraintVertical_bias="0.583" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#88FFFFFF"
        android:text="@string/textnuminventario"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView35"
        app:layout_constraintVertical_bias="0.075" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="147dp"
        android:layout_height="32dp"
        android:background="#87FFFFFF"
        android:text="@string/numeroInventario"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toEndOf="@+id/textView37"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.565" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#303098"
        android:text="@string/botonReservar"
        android:textColorHighlight="#303098"
        android:textColorHint="#303098"
        android:textColorLink="#303098"
        android:textSize="16sp"
        android:textStyle="bold"
        app:iconTint="#303098"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView37"
        app:layout_constraintVertical_bias="0.14"
        app:rippleColor="#303098"
        app:strokeColor="#303098" />

</androidx.constraintlayout.widget.ConstraintLayout>